<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".introductionGuide.CreateMessageFragment"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:weightSum="1"
        android:layout_marginBottom="15dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/action_edit_group_go_back"
            android:layout_weight="0"
            android:src="@drawable/ic_go_back"
            android:background="@android:color/transparent"
            android:layout_gravity="center" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:src="@drawable/header1"
            android:layout_weight="7"
            android:background="@android:color/transparent"
            android:layout_gravity="center" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_edit_group"
        android:id="@+id/text_edit_contact"
        android:layout_weight="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/prompt_name_of_group"
        android:id="@+id/editText_edit_group_name"
        android:layout_weight="0"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView_edit_group"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_edit_contact"
            android:id="@+id/action_edit_group"
            android:layout_weight="0"
            style="@style/ButtonTheme"
            android:layout_gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_delete_contact"
            android:id="@+id/action_delete_group"
            android:layout_weight="0"
            style="@style/ButtonTheme"
            android:layout_gravity="center" />
    </LinearLayout>

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tabHost2"
        android:layout_below="@+id/prompt_sender"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_weight="4"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_add"
                        android:id="@+id/button2" />

                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_add_to_address_book"
                        android:id="@+id/checkBox2" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="@string/prompt_first_name"
                        android:ems="10"
                        android:id="@+id/editText4" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:text="@string/prompt_last_name"
                        android:ems="10"
                        android:id="@+id/editText5"
                        android:layout_gravity="center_horizontal" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:text="@string/prompt_number"
                        android:ems="10"
                        android:id="@+id/editText6"
                        android:layout_gravity="center_horizontal" />

                    <ListView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/listView3" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>
